--- a/traefik/compose.yml.j2
+++ b/traefik/compose.yml.j2
@@ -16,15 +16,19 @@ services:
       # - "--certificatesresolvers.letsencrypt.acme.storage=/letsencrypt/acme.json"
       # This is needed for Unifi Network Application
       - "--serversTransport.insecureSkipVerify=true"
+      # DNS
       - "--entrypoints.dns.address=:53/tcp"
       - "--entrypoints.dns-udp.address=:53/udp"
       - "--entrypoints.dns.address=:53/tcp"
       - "--entrypoints.dns-udp.address=:53/udp"
+      # SSH
+      - "--entrypoints.ssh.address=:222"
     ports:
       - "53:53/udp"
       - "53:53/tcp"
       - "80:80"
       - "443:443"
+      - "222:222"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
       - "./letsencrypt:/letsencrypt"
